# ram

./: .gitignore  .gitlab-ci.yml  .gitmodules  .ram_config.yaml  Cargo.toml  Dockerfile  LICENSE.md  README.md
.github/workflows/: build.yml  rust.yml
assets/c/: c.yaml  model.hbs  model.template
assets/go/: go.yaml  model.hbs  model.template
assets/java/: java.yaml  model.hbs
assets/postgresql/: postgresql.yaml  schema.hbs  schema.template
assets/rust/: mod_model.hbs  mod_model.mustache  mod_model.template  model.hbs  model.mustache  model.template  rust.yaml
example/: .ram_config.yaml  Cargo.toml  farm.yaml
example/extra/: loop.yaml  loop3.yaml
examples/go/: .ram_config.yaml  main.go
examples/go/echo/: config.yaml  main.go
examples/go/echo/templates/: config.yaml  resource.hbs  resource.template  router.template
examples/go/models_only/: config.yaml  main.go
examples/go/pg_squirrel/: main.go
examples/go/pg_squirrel/templates/: config.yaml  squirrel.hbs
examples/go/squirrel/templates/: config.yaml  squirrel.hbs
examples/java/models/: config.yaml  pom.xml
examples/java/models/src/main/java/ram/app/: Main.java
examples/java/spark/: config.yaml  pom.xml
examples/java/spark/src/main/java/ram/app/: Main.java
examples/java/spark/templates/: controller.hbs  routes.hbs
examples/openapi/: array.yaml  farm.yaml  petstore.yaml
examples/openapi/extra/: animals.yaml  loop.yaml  loop2.yaml  loop3.yaml
examples/postgresql/: postgresql.yaml
examples/rust/: Cargo.toml
examples/rust/actix/: Cargo.toml  actix.yml
examples/rust/actix/src/: main.rs
examples/rust/actix/templates/: mod_resource.template  resource.hbs  resource.template
examples/rust/models/: Cargo.toml  config.yaml
examples/rust/models/src/: main.rs
examples/rust/rocket/: .ramconfig.yaml  Cargo.toml  rocket.yaml
examples/rust/rocket/src/: main.rs
examples/rust/rocket/templates/: mod_resource.hbs  mod_resource.template  resource.hbs  resource.template
examples/rust/src/: main.rs
examples/rust/templates/: mod_resource.template  resource.template
lang/: rust.yaml
lang/rust/: model.mustache  rust.yaml
res/: petstore.yaml
src/: api.rs  assets.rs  config.rs  helper.rs  helpers.rs  lang.rs  lib.rs  main.rs  model.rs  param.rs  resource.rs  state.rs  util.rs
template/: model.rs.template
templates/: model.rs.mustache  model.rs.template
tests/: gen_models.rs  test_generate.rs
