[package]
version = "0.6.0"
authors = ["alamminsalo <antti.lamminsalo@protonmail.com>"]
description = "Rusty API Modeler. Generates models from openapi spec."
edition = "2018"
exclude = ["example/"]
homepage = "https://github.com/alamminsalo/ram"
license = "MIT"
name = "ram"
repository = "https://github.com/alamminsalo/ram"
[[bin]]
name = "ram"
path = "src/main.rs"

[dependencies]
Inflector = "0.11.4"
failure = "0.1.5"
glob = "0.3.0"
handlebars = "2.0.2"
htmlescape = "0.3.1"
itertools = "0.8.1"
maplit = "1.0.2"
regex = "1.3.1"
rust-embed = "5.1.0"
serde_json = "1.0.40"
serde_yaml = "0.8.9"
structopt = "0.3.4"

[dependencies.openapi]
branch = "ram"
git = "https://github.com/alamminsalo/openapi"

[dependencies.serde]
features = ["derive"]
version = "1.0.98"

[lib]
name = "ram"
path = "src/lib.rs"
