[package]
authors = ["alamminsalo <antti.lamminsalo@protonmail.com>"]
description = "Rusty API Modeler. Generates models from openapi spec."
edition = "2018"
exclude = ["example/"]
homepage = "https://github.com/alamminsalo/ram"
license = "MIT"
name = "ram"
repository = "https://github.com/alamminsalo/ram"
version = "1.0.0"
[[bin]]
name = "ram"
path = "src/main.rs"

[dependencies]
Inflector = "^0.11"
failure = "^0.1"
glob = "^0.3"
handlebars = "^3.0"
htmlescape = "^0.3"
itertools = "^0.8"
maplit = "^1.0"
regex = "^1.3"
rust-embed = "^5.1"
serde_json = "^1.0"
serde_yaml = "^0.8"
structopt = "^0.3"
openapi = { path = "./openapi" }

[dependencies.serde]
features = ["derive"]
version = "^1.0"

[lib]
name = "ram"
path = "src/lib.rs"
