[package]
authors = ["alamminsalo <antti.lamminsalo@protonmail.com>"]
description = "Rusty API Modeler. Generates models from openapi spec."
edition = "2018"
exclude = ["example/"]
homepage = "https://github.com/alamminsalo/ram"
license = "MIT"
name = "ram"
repository = "https://github.com/alamminsalo/ram"
version = "1.0.18"
[[bin]]
name = "ram"
path = "src/main.rs"

[dependencies]
Inflector = "^0.11"
failure = "^0.1"
glob = "^0.3"
handlebars = "^3.0"
htmlescape = "^0.3"
indexmap = "*"
itertools = "^0.8"
maplit = "^1.0"
regex = "^1.3"
rust-embed = "^5.1"
structopt = "^0.3"

[dependencies.openapi]
branch = "ram"
git = "https://github.com/alamminsalo/openapi"

[dependencies.serde]
features = ["derive"]
version = "^1.0"

[dependencies.serde_json]
version = "^1.0"

[dependencies.serde_yaml]
version = "^0.8"

[lib]
name = "ram"
