[package]
name = "example"
version = "0.1.0"
authors = ["alamminsalo <antti.lamminsalo@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.101", features = [ "derive" ] }
chrono = "0.4.9"
