[package]
authors = ["alamminsalo <antti.lamminsalo@protonmail.com>"]
edition = "2018"
name = "example"
version = "0.1.0"
[dependencies]
rocket = "*"

[dependencies.chrono]
features = ["serde"]
version = "0.4.9"

[dependencies.serde]
features = ["derive"]
version = "1.0.101"
chrono = { version = "0.4.9", features = [ "serde" ] }
